# haskell-analysis

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  data-prep.cabal  grammar.cabal  greek-script.cabal  prepare.cabal  primary-type.cabal  stack.yaml
agda/AncientLanguage/: Sblgnt.agda  SblgntSample.agda  Source.agda  Test.agda
agda/AncientLanguage/Greek/Source/Sblgnt/: Matthew.agda
agda/AncientLanguage/Sblgnt/: Matthew.agda
app/: Greek.hs  Hebrew.hs  Main.hs  QueryStage.hs  RandomSample.hs  ScriptQueries.hs
data/: tlg0032.tlg001.perseus-grc2.xml
docs/xml-infer/: xml-sblgnt.txt
examples/: sblgnt-test.xml
grammar/: grammar.cabal  package.yaml  stack.yaml
grammar/src/Grammar/Common/: Decompose.hs
grammar/src/Grammar/Test/: Round.hs
greek-morph/: greek-morph.cabal  package.yaml
greek-morph/app/: Main.hs
greek-morph/src/Grammar/Greek/Morph/: Serialize.hs
greek-morph/test/: Spec.hs
greek-script/: .gitmodules  greek-script.cabal  package.yaml
greek-script/app/: Main.hs
greek-script/queries/: foreign-words-final-consonant.txt  script-de-next-summary.txt  script-de-next-vowels.txt  script-elision-next-syllable.txt  script-final-consonants-summary.txt  script-final-syllable.txt  script-independent-syllables-random10.txt  script-word-accent-position.txt
greek-script/src/Grammar/Greek/Script/: Serialize.hs  Word.hs
greek-script/src/Grammar/Greek/Script/Rounds/: Capitalization.hs  UnicodeSymbol.hs
greek-script/test/: Spec.hs
prepare/: LICENSE  package.yaml  prepare.cabal
prepare/app/: Greek.hs  Hebrew.hs  Main.hs
prepare/docs/xml-infer/: xml-sblgntapp.txt
prepare/src/Prepare/Perseus/: Paths.hs  TeiEpidocHeaderModel.hs  TeiEpidocHeaderParser.hs  TeiEpidocModel.hs  TeiEpidocParser.hs  TeiEpidocUnify.hs
prepare/src/Prepare/Sblgnt/: Model.hs  Parser.hs  Unify.hs
prepare/src/Prepare/Source/: DecomposeWords.hs
prepare/src/Prepare/Tanach/: HeaderModel.hs  HeaderParser.hs  Paths.hs  TeiHeaderParser.hs
prepare/src/Prepare/Xml/: Events.hs  PositionTypes.hs
prepare/test/: Spec.hs
primary-type/: package.yaml  primary-type.cabal
queries/: script-acute-no-punctuation.txt  script-crasis-summary.txt  script-crasis.txt  script-elision-syllables.txt  script-elision.txt  script-final-consonant-no-elision.txt  script-final-consonants-first-300.txt  script-force-acute.txt  script-foreign-word.txt  script-grave-has-punctuation.txt  script-independent-syllables-summary.txt  script-word-accent-with-position.txt  script-word-basic-accent.txt  script-word-diaeresis-convention.txt  script-word-extra-accent.txt  script-word-force-acute.txt  script-word-initial-aspiration.txt  script-word-mark-preservation.txt
src/: Log.hs  Main.hs  Prepare.hs  Primary.hs  Sblgnt.hs  XmlEvents.hs  XmlParser.hs
src/Data/Serialize/: Text.hs
src/Grammar/: Around.hs  Common.hs  CommonTypes.hs  Contextualize.hs  Numeric.hs  Prepare.hs  Pretty.hs  Round.hs  Serialize.hs  SerializeStage.hs
src/Grammar/Common/: List.hs  Numeric.hs  Prepare.hs  Pretty.hs  Round.hs  Serialize.hs  Types.hs
src/Grammar/Greek/: Stage.hs  Stages.hs
src/Grammar/Greek/Script/: Around.hs  Letter.hs  MarkGroups.hs  Round.hs  Rounds.hs  Serialize.hs  Stage.hs  SymbolLetter.hs  Types.hs  UnicodeSymbol.hs  Word.hs
src/Grammar/Greek/Script/Around/: Accent.hs  Breathing.hs  Capitalization.hs  ConsonantMarks.hs  Final.hs  GraveAccent.hs  LetterVowelConsonant.hs  MarkGroups.hs  MarkSplit.hs  SymbolLetter.hs  UnicodeSymbol.hs  VocalicSyllable.hs  WordPunctuationElision.hs
src/Grammar/Greek/Script/Round/: Accent.hs  Breathing.hs  Capitalization.hs  ConsonantMarks.hs  Final.hs  LetterVowelConsonant.hs  MarkGroups.hs  MarkSplit.hs  SymbolLetter.hs  UnicodeSymbol.hs  VocalicSyllable.hs  WordPunctuationElision.hs
src/Grammar/Greek/Script/Rounds/: Accent.hs  Breathing.hs  Capitalization.hs  ConsonantMarks.hs  Final.hs  LetterVowelConsonant.hs  MarkGroups.hs  MarkSplit.hs  SymbolLetter.hs  UnicodeSymbol.hs  VocalicSyllable.hs  WordPunctuationElision.hs
src/Grammar/IO/: QueryStage.hs  RandomSample.hs  Serialize.hs
src/Grammar/Test/: Round.hs  Stage.hs
src/Prepare/: Decompose.hs  Language.hs  Log.hs
src/Prepare/Perseus/: Paths.hs  TeiEpidocHeaderModel.hs  TeiEpidocHeaderParser.hs  TeiEpidocModel.hs  TeiEpidocParser.hs  TeiEpidocParserCommon.hs  TeiEpidocUnify.hs
src/Prepare/Sblgnt/: Model.hs  Output.hs  Parser.hs  Unify.hs
src/Prepare/Source/: Model.hs  Output.hs
src/Prepare/Tanach/: HeaderParser.hs  IndexModel.hs  IndexParser.hs  TanachModel.hs  TanachParser.hs  TeiHeaderModel.hs  TeiHeaderParser.hs
src/Prepare/Xml/: Events.hs  Parser.hs  PositionTypes.hs
src/Sblgnt/: Model.hs  Parser.hs
src/Xml/: Events.hs  Parser.hs  PositionTypes.hs
test/: Around.hs  Greek.hs  Round.hs  Spec.hs
