name:                data-prep
version:             0.1.0.0
synopsis:            Prepare ancient language data
description:         Please see README.md
homepage:            https://github.com/scott-fleischman/haskell-data-prep
license:             MIT
license-file:        LICENSE
author:              Scott Fleischman
maintainer:          scott-fleischman@users.noreply.github.com
copyright:           2016 Scott Fleischman
build-type:          Simple
cabal-version:       >=1.10

executable data-prep
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
    base >= 4.7 && < 5
