name: grammar
version: 0.1.0.0
synopsis: Ancient language grammars encoded in Haskell
description: Please see README.md
homepage: https://github.com/ancientlanguage/haskell-grammar#readme
author: Scott Fleischman
maintainer: scott-fleischman@users.noreply.github.com
copyright: 2016 Scott Fleischman
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Grammar.CommonTypes
    Grammar.Contextualize
    Grammar.Greek.Script.Round
    Grammar.Greek.Script.Round.Accent
    Grammar.Greek.Script.Round.Breathing
    Grammar.Greek.Script.Round.Capitalization
    Grammar.Greek.Script.Round.ConsonantMarks
    Grammar.Greek.Script.Round.Final
    Grammar.Greek.Script.Round.LetterVowelConsonant
    Grammar.Greek.Script.Round.MarkGroups
    Grammar.Greek.Script.Round.MarkSplit
    Grammar.Greek.Script.Round.SymbolLetter
    Grammar.Greek.Script.Round.UnicodeSymbol
    Grammar.Greek.Script.Round.VocalicSyllable
    Grammar.Greek.Script.Round.WordPunctuationElision
    Grammar.Greek.Script.Stage
    Grammar.Greek.Script.Types
    Grammar.Greek.Script.Word
    Grammar.Greek.Stage
    Grammar.IO.QueryStage,
    Grammar.IO.RandomSample,
    Grammar.Prepare
    Grammar.Pretty
    Grammar.Round
    Grammar.Serialize
  ghc-options: -Wall -fwarn-tabs -O2
  default-extensions:
    OverloadedStrings,
    PatternSynonyms,
    ScopedTypeVariables,
    TypeOperators
  build-depends:
    base >= 4.9,
    containers,
    bytestring,
    text,
    cereal,
    lens,
    either,
    random-fu,
    random-source,
    array,
    primary-type
  default-language: Haskell2010

executable query
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    ScriptQueries
  ghc-options: -Wall -fwarn-tabs -O2 -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    OverloadedStrings
    ScopedTypeVariables,
    TypeOperators
  build-depends:
    base,
    containers,
    bytestring,
    text,
    either,
    lens,
    cereal,
    grammar,
    primary-type,
    optparse-applicative
  default-language: Haskell2010

test-suite verify
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Round,
    Greek
  default-extensions:
    OverloadedStrings,
    ScopedTypeVariables,
    TypeOperators
  build-depends:
    base,
    either,
    lens,
    grammar,
    test-framework,
    test-framework-hunit,
    HUnit,
    hspec,
    text,
    primary-type
  ghc-options: -fwarn-tabs -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/scott-fleischman/haskell-grammar
