name: grammar
version: 1.0.0
synopsis: Ancient language grammars encoded in Haskell
description: Please see README.md
homepage: https://github.com/ancientlanguage/haskell-grammar#readme
author: Scott Fleischman
maintainer: scott-fleischman@users.noreply.github.com
copyright: 2016 Scott Fleischman
build-type: Simple
cabal-version: >=1.10
source-repository head
  type: git
  location: https://github.com/ancientlanguage/haskell-grammar

library
  hs-source-dirs: src
  exposed-modules:
    Grammar.Common
    Grammar.Common.List
    Grammar.Common.Numeric
    Grammar.Common.Prepare
    Grammar.Common.Pretty
    Grammar.Common.Round
    Grammar.Common.Types
    Grammar.IO.RandomSample
    Grammar.IO.QueryStage
    Grammar.IO.Serialize
    Grammar.Test.Round
    Grammar.Test.Stage
  ghc-options: -Wall -fwarn-tabs -O2
  default-extensions:
    OverloadedStrings,
    PatternSynonyms,
    ScopedTypeVariables,
    TypeOperators
  build-depends:
    base >= 4.9,
    containers,
    bytestring,
    text,
    extra,
    filepath,
    directory,
    cereal,
    lens,
    either,
    random-fu,
    random-source,
    array,
    test-framework,
    test-framework-hunit,
    HUnit,
    primary-type
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  default-extensions:
    OverloadedStrings,
    PatternSynonyms,
    ScopedTypeVariables,
    TypeOperators
  build-depends:
    base,
    either,
    lens,
    test-framework,
    test-framework-hunit,
    HUnit,
    hspec,
    text,
    primary-type,
    grammar
  ghc-options: -fwarn-tabs -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
