name:                prepare
version:             0.1.0.0
synopsis:            Prepare ancient language data
description:         Please see README.md
homepage:            https://github.com/ancientlanguage/haskell-prepare
license:             MIT
license-file:        LICENSE
author:              Scott Fleischman
maintainer:          scott-fleischman@users.noreply.github.com
copyright:           2016 Scott Fleischman
build-type:          Simple
cabal-version:       >=1.10

executable prepare
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Sblgnt
  default-language: Haskell2010
  build-depends:
    base >= 4.9,
    text >=1.2,
    xml-conduit >=1.3
