name:                prepare
version:             0.1.0.0
synopsis:            Prepare ancient language data
description:         Please see README.md
homepage:            https://github.com/ancientlanguage/haskell-prepare
license:             MIT
license-file:        LICENSE
author:              Scott Fleischman
maintainer:          scott-fleischman@users.noreply.github.com
copyright:           2016 Scott Fleischman
build-type:          Simple
cabal-version:       >=1.10

executable prepare
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Sblgnt,
    Xml.Events,
    Xml.Parser,
    Xml.PositionTypes
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs -O2
  default-extensions:
    LambdaCase,
    OverloadedStrings
  build-depends:
    base >=4.9,
    containers >=0.5,
    text >=1.2,
    resourcet >=1.1,
    conduit >=1.2,
    conduit-combinators >=1.0,
    conduit-extra >=1.1,
    xml-types >=0.3,
    xml-conduit >=1.3,
    megaparsec >=5.0,
    filemanip >=0.3
