name: prepare
version: 0.1.0.0
synopsis: Prepare ancient language data
description: Please see README.md
homepage: https://github.com/ancientlanguage/haskell-prepare
license: MIT
license-file: LICENSE
author: Scott Fleischman
maintainer: scott-fleischman@users.noreply.github.com
copyright: 2016 Scott Fleischman
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Grammar.Greek.Script.Letter,
    Prepare,
    Prepare.Decompose,
    Prepare.Log,
    Prepare.Sblgnt.Model,
    Prepare.Sblgnt.Parser,
    Prepare.Sblgnt.Unify,
    Prepare.Source.Output,
    Prepare.Xml.Events,
    Prepare.Xml.Parser,
    Prepare.Xml.PositionTypes
  ghc-options: -Wall -fwarn-tabs -O2
  default-extensions:
    LambdaCase,
    OverloadedStrings
  build-depends:
    base >=4.9,
    containers >=0.5,
    text >=1.2,
    resourcet >=1.1,
    conduit >=1.2,
    conduit-combinators >=1.0,
    conduit-extra >=1.1,
    xml-types >=0.3,
    xml-conduit >=1.3,
    megaparsec >=5.0,
    split >=0.2,
    filepath >=1.4,
    directory >=1.2,
    lens >=4.1,
    cereal >=0.5,
    primary-type
  default-language: Haskell2010

executable prep
  hs-source-dirs: app
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs -O2
  default-extensions:
    LambdaCase,
    OverloadedStrings
  build-depends:
    base,
    containers,
    text,
    xml-conduit,
    prepare,
    cereal,
    filemanip >=0.3,
    bytestring >=0.10,
    primary-type

test-suite prepare-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  ghc-options: -Wall -fwarn-tabs -O2 -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    LambdaCase,
    OverloadedStrings
  build-depends:
    base,
    prepare,
    test-framework,
    test-framework-hunit,
    HUnit,
    hspec
  default-language: Haskell2010
