name: primary-type
version: 0.1.0.0
synopsis: Types for primary sources of ancient language texts
description: Please see README.md
homepage: https://github.com/ancientlanguage/haskell-primary-type#readme
license: MIT
license-file: LICENSE
author: Scott Fleischman
maintainer: scott-fleischman@users.noreply.github.com
copyright: 2016 Scott Fleischman
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules: Primary
  ghc-options: -Wall -fwarn-tabs -O2
  build-depends:
    base >=4.9,
    text >=1.2,
    cereal >=0.5
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/ancientlanguage/haskell-primary-type
